we need to specify ip address

--- a/network_config.cfg
+++ b/network_config.cfg
@@ -2,7 +2,7 @@ version: 2
 ethernets:
   ens3:
     addresses:
-    - 10.136.0.3/16
+    - ${ip_address}
     gateway4: 10.136.0.1
     nameservers:
         addresses:
