--- a/network_config.cfg
+++ b/network_config.cfg
@@ -3,8 +3,8 @@ ethernets:
   ens3:
     addresses:
     - ${ip_address}
-    gateway4: 10.136.0.1
+    gateway4: ${gateway4}
     nameservers:
         addresses:
-        - 67.207.67.2
-        - 67.207.67.3
+        - ${primary_nameserver}
+        - ${secondary_nameserver}
