Format disk on cloudinit

--- a/cloud_init.cfg
+++ b/cloud_init.cfg
@@ -17,3 +17,13 @@ chpasswd:
   list: |
      root:terraform-libvirt-linux
   expire: False
+disk_setup:
+  /dev/vdb:
+    table_type: gpt
+    layout: True
+    overwrite: True
+
+fs_setup:
+  - device: /dev/vdb
+    partition: 1
+    filesystem: ext4
