We need to mount the new volume

--- a/cloud_init.cfg
+++ b/cloud_init.cfg
@@ -27,3 +27,6 @@ fs_setup:
   - device: /dev/vdb
     partition: 1
     filesystem: ext4
+
+mounts:
+ - [ /dev/vdb1, /var, "auto", "defaults,nofail", "0", "0" ]
